--- a/index.html
+++ b/index.html
@@ -32,17 +32,21 @@
             <br> Additionally, while at Caltech I run the Coatings Thermal Noise laser optics lab under Professor Adhikari. We are investigating coatings thermal noise for AlGaAs coatings using two 3.68 cm Fabry-Perot optical cavities. AlGaAs is a candidate optical coating for next-generation gravitational-wave detector optics, so characterization of its thermal noise properties is required for the future of gravitational wave astronomy.
         </p>
         <p>
-            <label>Alma Mater:</label> <img src="figures/NotreDameLogo.png" alt="Notre Dame Logo" style="width:22px;height:20px;"> Notre Dame. Graduated 2014. Degrees in Physics and Computer Science.  3.795 GPA
-        </p>
-        <p>
             <label>Programming Languages and Computing</label>
             <br> Python, C/C++, MATLAB, Unix, Javascript, Git, LaTeX
             <br> Interferometer simulation <a href="http://www.gwoptics.org/finesse/">Finesse</a>
             <br> Linear Simulation and Optimization of analog electronic circuits <a href="http://www2.mpq.mpg.de/~ros/geo600_docu/soft/liso/manual.pdf">LISO</a>
         </p>
+        <p> 
+            <label>PyPi Libraries</label>
+            <br> <a href="https://pypi.org/project/nds2utils/">nds2utils</a>: convenient user interface for the python nds2 LIGO data-acquisition client. 
+            <a href="https://git.ligo.org/craig-cahillane/nds2utils">(gitlab link)</a>
+            <br> <a href="https://pypi.org/project/beamtrace/">beamtrace</a>: python3 based gaussian laser beam ABCD matrix propagator. 
+            <a href="https://git.ligo.org/craig-cahillane/beamtrace">(gitlab link)</a>
+        </p>
         <p>
             <label>Optics</label>
-            <br> Worked in the Caltech coatings thermal noise lab. 
+            <br> Worked in the Caltech optical coatings thermal noise lab for testing aluminum gallium arsinide (AlGaAs) optics coatings. 
             <br> Locked two lasers' frequencies to two Fabry-Perot cavity lengths with the goal of measuring cavity mirror coatings Brownian noise.
             <br> Mode matching, polarization, mode cleaning, laser intensity control, laser frequency control, cavity temperature control
         </p>
@@ -67,6 +71,9 @@
             <br> <a href="fabryperot.html">Interactive Fabry-Perot optical cavity</a>.  Visualizes how lasers and mirrors interact in a simple two-mirror resonator.
         </p>
         <p>
+                <label>Alma Mater:</label> <img src="figures/NotreDameLogo.png" alt="Notre Dame Logo" style="width:22px;height:20px;"> Notre Dame. Graduated 2014. Degrees in Physics and Computer Science.  3.795 GPA
+            </p>
+        <p>
             <label>Interests:</label> Lasers, Optics, Control Systems, Cosmoslogy, Astrophysics, Arduino, Raspberry Pi, Golf, Tennis, Frisbee, Notre Dame Football
         </p>
 
@@ -76,13 +83,14 @@
             <a href="https://arxiv.org/abs/1708.03023">(arXiv version)</a>
         </p>
         <p>Contributing Author:
+            <br> <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.95.062003">Calibration of the Advanced LIGO detectors for the discovery of the binary black-hole merger GW150914</a>
+            <a href="https://arxiv.org/abs/1602.03845">(arXiv version)</a>
             <br> <a href="https://arxiv.org/abs/1712.09719">Systematic calibration error requirements for gravitational-wave detectors via the Cramér-Rao bound</a>
         </p>
-        <p>In Prep:
+        <p>In Prep (as first author or member of paper-writing team):
             <br> <a href="https://git.ligo.org/o3commissioning/o3-commissioning-paper/">Sensitivity and Performance of the Advanced LIGO Detectors in the Third Observing Run</a>
             <br> <a href="https://git.ligo.org/3gfrequencynoise/3gfn-paper">Frequency Noise for Third-Generation Gravitational Wave Detectors</a>
         </p>
-        <br>
         <p>Full Collaboration Papers:
             <br>
             <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.119.161101">GW170817: Observation of Gravitational Waves from a Binary Neutron Star Inspiral</a> First direct detection of gravitational waves from a neutron star binary.
