--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <br> <a href="fabryperot.html">Interactive Fabry-Perot optical cavity</a>.  Visualizes how lasers and mirrors interact in a simple two-mirror resonator.
         </p>
         <p>
-                <label>Alma Mater:</label> <img src="figures/NotreDameLogo.png" alt="Notre Dame Logo" style="width:22px;height:20px;"> Notre Dame. Graduated 2014. Degrees in Physics and Computer Science.  3.795 GPA
-            </p>
+            <label>Alma Mater:</label> <img src="figures/NotreDameLogo.png" alt="Notre Dame Logo" style="width:22px;height:20px;"> University of Notre Dame. Graduated 2014.  Degrees in Physics and Computer Science.  3.795 GPA
+        </p>
         <p>
             <label>Interests:</label> Lasers, Optics, Control Systems, Cosmoslogy, Astrophysics, Arduino, Raspberry Pi, Golf, Tennis, Frisbee, Notre Dame Football
         </p>
