Cleaned up the first paragraph

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <label>Research</label>
             <br> I am currently a graduate student at Caltech, started August 2014. 
             <br> Worked as a commissioner of the Advanced LIGO Hanford Gravitational-Wave Observatory intermittently for a total of two years.
-            <br> Focused on modeling laser frequency and intensity control systems for lower noise masking the gravitational-wave signal.
-            <br> 
-            <br> Additionally, while at Caltech I run the Coatings Thermal Noise laser optics lab under Professor Adhikari. We are investigating coatings thermal noise for AlGaAs coatings using two 3.68 cm Fabry-Perot optical cavities. AlGaAs is a candidate optical coating for next-generation gravitational-wave detector optics, so characterization of its thermal noise properties is required for the future of gravitational wave astronomy.
+            <br> Focused on modeling laser frequency and intensity control systems' noise masking the gravitational-wave signal.
+            <br> Measured and simulated interferometer transfer functions to infer interferometric parameters, including the resonant arm power.
+            <br> Measured and simulated the differential arm (DARM) degree of freedom for comparison between the expected response to gravitational-waves and reality.
+            <br> Created the advanced-detector era interferometric calibration uncertainty budget pipeline.
         </p>
         <p>
             <label>Programming Languages and Computing</label>
