updated Systematic paper with CQG link

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <p> 
             <label>PyPi Libraries</label>
             <br> <a href="https://pypi.org/project/nds2utils/">nds2utils</a>: convenient user interface for the python nds2 LIGO data-acquisition client. 
-            <a href="https://git.ligo.org/craig-cahillane/nds2utils">(gitlab link)</a>
+            <a href="https://git.ligo.org/craig-cahillane/nds2utils">(gitlab)</a>
             <br> <a href="https://pypi.org/project/beamtrace/">beamtrace</a>: python3 based gaussian laser beam ABCD matrix propagator. 
-            <a href="https://git.ligo.org/craig-cahillane/beamtrace">(gitlab link)</a>
+            <a href="https://git.ligo.org/craig-cahillane/beamtrace">(gitlab)</a>
         </p>
         <p>
             <label>Optics</label>
@@ -81,12 +81,13 @@
         <h2>Publications:</h2>
         <p>First Author:
             <br> <a href="https://doi.org/10.1103/PhysRevD.96.102001">Calibration Uncertainty for Advanced LIGO's First and Second Observing Runs</a>
-            <a href="https://arxiv.org/abs/1708.03023">(arXiv version)</a>
+            <a href="https://arxiv.org/abs/1708.03023">(arXiv)</a>
         </p>
         <p>Contributing Author:
             <br> <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.95.062003">Calibration of the Advanced LIGO detectors for the discovery of the binary black-hole merger GW150914</a>
-            <a href="https://arxiv.org/abs/1602.03845">(arXiv version)</a>
-            <br> <a href="https://arxiv.org/abs/1712.09719">Systematic calibration error requirements for gravitational-wave detectors via the Cramér-Rao bound</a>
+            <a href="https://arxiv.org/abs/1602.03845">(arXiv)</a>
+            <br> <a href="https://iopscience.iop.org/article/10.1088/1361-6382/ab368c">Systematic calibration error requirements for gravitational-wave detectors via the Cramér-Rao bound</a>
+            <a href="https://arxiv.org/abs/1712.09719">(arXiv)</a>
         </p>
         <p>In Prep (as first author or member of paper-writing team):
             <br> <a href="https://git.ligo.org/o3commissioning/o3-commissioning-paper/">Sensitivity and Performance of the Advanced LIGO Detectors in the Third Observing Run</a>
