Adding Statistical Methods section index.html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             <a href="https://git.ligo.org/craig-cahillane/beamtrace">(gitlab)</a>
         </p>
         <p>
+            <label>Statistical Methods</label>
+            <br> Markov Chain Monte Carlo (MCMC): <a href="https://emcee.readthedocs.io/en/stable/">emcee</a>
+            <br> Gaussian Process Regression (GPR): <a href="https://scikit-learn.org/stable/modules/gaussian_process.html">scikit-learn</a>
+        </p>
+        <p>
             <label>Optics</label>
             <br> Worked in the Caltech optical coatings thermal noise lab for testing aluminum gallium arsinide (AlGaAs) optics coatings. 
             <br> Locked two lasers' frequencies to two Fabry-Perot cavity lengths with the goal of measuring cavity mirror coatings Brownian noise.
