Added interactive frequency noisebudget

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
         <a href="20191121_ArmPower_Measurements.svg">SVG plot of Arm Power Measurements</a>
         <br>
         <a href="Analog_OUT2_vs_REFL_SERVO_ERR.svg">Analog OUT2 vs REFL SERVO ERR SVG</a>
-
+        <br>
+        <a href="frequencyNB_withUpgrades.svg">Interactive Frequency Noise Budget</a>
         <br>
         <br>
 
