Added link to CV on main page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             Sixth Year Physics Grad Student at <img src="figures/Caltech.png" alt="Caltech Logo" style="width:62px;height:15px;">
             <br> Work in Experimental Gravity for<img src="figures/LIGOLogo.jpg" alt="LIGO Logo" style="width:42px;height:30px;">
             <br> ccahilla@caltech.edu
+            <br> <a href="https://gitlab.com/ccahilla/cv">Curriculum Vitae on gitlab</a>
         </p>
         <p>
             <label>Research</label>
