Added link to my 538 The Riddler animated solution which was feature on the site

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <label>Alma Mater:</label> <img src="figures/NotreDameLogo.png" alt="Notre Dame Logo" style="width:22px;height:20px;"> University of Notre Dame. Graduated 2014.  Degrees in Physics and Computer Science.  3.795 GPA
         </p>
         <p>
-            <label>Interests:</label> Lasers, Optics, Control Systems, Cosmoslogy, Astrophysics, Arduino, Raspberry Pi, Golf, Tennis, Frisbee, Notre Dame Football
+            <label>Interests:</label> Lasers, Optics, Control Systems, Cosmoslogy, Astrophysics, Arduino, Raspberry Pi, Golf, Tennis, Frisbee, Notre Dame Football, 538 The Riddler
         </p>
 
         <h2>Publications:</h2>
@@ -113,6 +113,8 @@
         <a href="fabryperot.html">Interactive Fabry-Perot Optical Cavity Animation in Javascript</a>
         <br>
         <a href="alcohol-tracker/index.html">Blood Alcohol Content Estimator in React</a>
+        <br>
+        <a href="https://fivethirtyeight.com/features/can-you-do-math-without-numbers/">My animated solution to a 538 The Riddler problem - May 12, 2017</a>
 
         <h2>Interactive Plot Gallery:</h2>
         <a href="lho_noisebudget.svg">LIGO Hanford Noisebudget Interactive SVG</a>
