Added frequency noise to DARM TF

--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
         <br>
         <a href="frequencyNB_withUpgrades.svg">Interactive Frequency Noise Budget</a>
         <br>
+        <a href="frequencyTF_finesse_collection.svg">Frequency noise to DARM coupling</a>
+        <br>
         <br>
 
         <p>
