Added LHO correlated noise budget with several numbers of averages

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         <br>
         <a href="frequencyTF_finesse_collection.svg">Frequency noise to DARM coupling</a>
         <br>
+        <a href="lho_xcor_comparisons_no_logbinning.svg">LHO Correlated Noise Budget</a>
         <br>
 
         <p>
