Added two correlated noisebudgets

--- a/index.html
+++ b/index.html
@@ -127,7 +127,12 @@
         <br>
         <a href="frequencyTF_finesse_collection.svg">Frequency noise to DARM coupling</a>
         <br>
-        <a href="lho_xcor_comparisons_no_logbinning.svg">LHO Correlated Noise Budget</a>
+        <a href="lho_xcor_comparisons_no_logbinning.svg">LHO Correlated Noise Budget - comparisons of many numbers of averages</a>
+        <br>
+        <a href="lho_xcor_no_logbinning_averages_1000.svg">LHO Correlated Noise Budget - 1000 averages - ungated vs gated mean ASD vs median averaged ASD</a>
+        <br>
+        <a href="lho_xcor_no_logbinning_averages_20000.svg">LHO Correlated Noise Budget - 20000 averages - ungated vs gated mean ASD vs median averaged ASD</a>
+        <br>
         <br>
 
         <p>
