Updated LHO correlated noise budget plots, and added new ones

--- a/index.html
+++ b/index.html
@@ -127,11 +127,18 @@
         <br>
         <a href="frequencyTF_finesse_collection.svg">Frequency noise to DARM coupling</a>
         <br>
+        <h3>LHO correlated noise spectra</h3>
         <a href="lho_xcor_comparisons_no_logbinning.svg">LHO Correlated Noise Budget - comparisons of many numbers of averages</a>
         <br>
         <a href="lho_xcor_no_logbinning_averages_1000.svg">LHO Correlated Noise Budget - 1000 averages - ungated vs gated mean ASD vs median averaged ASD</a>
         <br>
         <a href="lho_xcor_no_logbinning_averages_20000.svg">LHO Correlated Noise Budget - 20000 averages - ungated vs gated mean ASD vs median averaged ASD</a>
+        <br>
+        <a href="lho_xcor_mA.svg">Raw DCPD CSDs plus SUM plus NULL - 1000 averages</a>
+        <br>
+        <a href="lho_xcor_DCPD_A_vs_DCPD_B.svg">LHO DCPD PSDs - 1000 averages</a>
+        <br>
+        <a href="lho_xcor_CSDs_averages_20000.svg">LHO CSDs and coherence - 20000 averages</a>
         <br>
         <br>
 
