Added lho_xcor_DARM_comparisons.svg for hosting purposes

--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
         <br>
         <a href="lho_xcor_CSDs_averages_20000.svg">LHO CSDs and coherence - 20000 averages</a>
         <br>
+        <a href="lho_xcor_DARM_comparisons.svg">LHO Correlated Noise Budget - Comparison with different DARM OLGs - gated- and median-averaging</a>
+        <br>
         <br>
 
         <p>
