Added comparison between unbalanced and balanced DCPDs

--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
         <br>
         <a href="lho_xcor_DARM_comparisons.svg">LHO Correlated Noise Budget - Comparison with different DARM OLGs - gated- and median-averaging</a>
         <br>
+        <a href="lho_xcor_DCPD_balanced_comparisons.svg">LHO Correalted Noise Budget - Comparison between shot noise balanced and unbalanced PDs</a>
+        <br>
         <br>
 
         <p>
