Added lho_xcor_interactive_demo.mov and updated some html pages to display it.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <br> Organized ~15 trips to local elementary and high schools, and even more talks to schools out of state, including Notre Dame.
             <br> <a href="blackholedemo.html">Black Hole Merger Demonstration</a>.  Simulates gravitational wave emission from black hole binaries near the end of their lives.
             <br> <a href="fabryperot.html">Interactive Fabry-Perot optical cavity</a>.  Visualizes how lasers and mirrors interact in a simple two-mirror resonator.
+            <br> <a href="lho_xcor_interactive.html">Interactive LHO correlated noise plot</a>.  Demo of my interactive LIGO Hanford correlated noise plot.
         </p>
         <p>
             <label>Alma Mater:</label> <img src="figures/NotreDameLogo.png" alt="Notre Dame Logo" style="width:22px;height:20px;"> University of Notre Dame. Graduated 2014.  Degrees in Physics and Computer Science.  3.795 GPA
