--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
         <br>
         <a href="frequencyTF_finesse_collection.svg">Frequency noise to DARM coupling</a>
         <br>
+        <a href="ward_vs_finesse_DARM_model.svg">Finesse vs Ward vs actual LHO DARM measurement</a>
+        <br>
         <h3>LHO correlated noise spectra</h3>
         <a href="lho_xcor_comparisons_no_logbinning.svg">LHO Correlated Noise Budget - comparisons of many numbers of averages</a>
         <br>
