Added a problem I solved while writing my thesis

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
         <a href="https://fivethirtyeight.com/features/can-you-do-math-without-numbers/">My animated solution to a 538 The Riddler problem - May 12, 2017</a>
         <br>
         <a href="https://en.wikipedia.org/wiki/Special:Contributions/Ccahilla">Wikipedia contributions</a>
+        <br>
+        <a href="sum_exponential_and_laplace_distributions.html">Sum of Exponential and Laplace random variables</a>
 
         <h2>Interactive Plot Gallery:</h2>
         <a href="lho_noisebudget.svg">LIGO Hanford Noisebudget Interactive SVG</a>
