Switched to the latex .pdf

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <br>
         <a href="https://en.wikipedia.org/wiki/Special:Contributions/Ccahilla">Wikipedia contributions</a>
         <br>
-        <a href="sum_exponential_and_laplace_distributions.html">Sum of Exponential and Laplace random variables</a>
+        <a href="sum_exponential_and_laplace_distributions.pdf">Sum of Exponential and Laplace random variables</a>
 
         <h2>Interactive Plot Gallery:</h2>
         <a href="lho_noisebudget.svg">LIGO Hanford Noisebudget Interactive SVG</a>
