Added open loop gain plot.mp4

--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
 
         <h1 class="text-center">Craig Cahillane</h1>
         <p class="text-center">
-            Sixth Year Physics Grad Student at <img src="figures/Caltech.png" alt="Caltech Logo" style="width:62px;height:15px;">
-            <br> Work in Experimental Gravity for<img src="figures/LIGOLogo.jpg" alt="LIGO Logo" style="width:42px;height:30px;">
-            <br> ccahilla@caltech.edu
+            Postdoc for<img src="figures/LIGOLogo.jpg" alt="LIGO Logo" style="width:42px;height:30px;">
+            <br> PhD in Experimental Gravity from <img src="figures/Caltech.png" alt="Caltech Logo" style="width:62px;height:15px;">
+            <br> craigcahillane@fastmail.com
             <br> <a href="https://gitlab.com/ccahilla/cv">Curriculum Vitae on gitlab</a>
         </p>
         <p>
             <label>Research</label>
-            <br> I am currently a graduate student at Caltech, started August 2014. 
-            <br> Worked as a commissioner of the Advanced LIGO Hanford Gravitational-Wave Observatory intermittently for a total of two years.
-            <br> Focused on modeling laser frequency and intensity control systems' noise masking the gravitational-wave signal.
-            <br> Measured and simulated interferometer transfer functions to infer interferometric parameters, including the resonant arm power.
-            <br> Measured and simulated the differential arm (DARM) degree of freedom for comparison between the expected response to gravitational-waves and reality.
-            <br> Created the advanced-detector era interferometric calibration uncertainty budget pipeline.
+            <br> I am currently a postdoc at LIGO Hanford Observatory, starting in February 2021. 
+            <br> I graduated from Caltech with a PhD in experimental astrophysics, with a focus on calibration uncertainty and interferometer controls. 
+            <br> As a grad student I worked as a commissioner at LIGO intermittently for a total of two years.
+            <br> I focused on modeling laser frequency and intensity control systems' noise masking the gravitational-wave signal,
+            <br> measured and simulated interferometer transfer functions to infer the resonant arm power,
+            <br> measured and simulated the differential arm (DARM) degree of freedom for comparison between the expected response to gravitational-waves and reality,
+            <br> and created the advanced-detector era interferometric calibration uncertainty budget pipeline.
         </p>
         <p>
             <label>Programming Languages and Computing</label>
@@ -73,6 +74,7 @@
         </p>
         <p>
             <label>Outreach</label> 2015-2017 LIGO Caltech Outreach Lead.
+            <br> <a href="blackholedemo.html">Black Hole Merger Demonstration</a>
             <br> Organized ~15 trips to local elementary and high schools, and even more talks to schools out of state, including Notre Dame.
             <br> <a href="blackholedemo.html">Black Hole Merger Demonstration</a>.  Simulates gravitational wave emission from black hole binaries near the end of their lives.
             <br> <a href="fabryperot.html">Interactive Fabry-Perot optical cavity</a>.  Visualizes how lasers and mirrors interact in a simple two-mirror resonator.
@@ -107,11 +109,15 @@
         </p>
 
         <h2>Links:</h2>
+        <a href="https://www.youtube.com/watch?v=X7RJHxeCulY">How does LIGO detect gravitational waves?</a>  Youtube video submission to the SoME1 math explainer competition.
+        <br>
+        <a href="fabryperot.html">Interactive Fabry-Perot Optical Cavity Animation in Javascript</a>
+        <br>
+        <a href="open_loop_gain_plot.mp4">Interactive PyQt5 widget for fast analysis of LIGO measured transfer functions</a>
+        <br>
         <a href="shot.html">Shot Noise Calculator</a>
         <br>
         <a href="noise.html">Latest Coatings Thermal Noise Budget in my lab at Caltech</a>
-        <br>
-        <a href="fabryperot.html">Interactive Fabry-Perot Optical Cavity Animation in Javascript</a>
         <br>
         <a href="alcohol-tracker/index.html">Blood Alcohol Content Estimator in React</a>
         <br>
