Added High power

--- a/index.html
+++ b/index.html
@@ -20,43 +20,54 @@
         <h1 class="text-center">Craig Cahillane</h1>
         <p class="text-center">
             Postdoc for<img src="figures/LIGOLogo.jpg" alt="LIGO Logo" style="width:42px;height:30px;">
-            <br> PhD in Experimental Gravity from <img src="figures/Caltech.png" alt="Caltech Logo" style="width:62px;height:15px;">
+            <br> PhD in Experimental Gravity from <img src="figures/Caltech.png" alt="Caltech Logo"
+                style="width:62px;height:15px;">
             <br> craigcahillane@fastmail.com
             <br> <a href="https://gitlab.com/ccahilla/cv">Curriculum Vitae on gitlab</a>
         </p>
         <p>
             <label>Research</label>
-            <br> I am currently a postdoc at LIGO Hanford Observatory, starting in February 2021. 
-            <br> I graduated from Caltech with a PhD in experimental astrophysics, with a focus on calibration uncertainty and interferometer controls. 
+            <br> I am currently a postdoc at LIGO Hanford Observatory, starting in February 2021.
+            <br> I graduated from Caltech with a PhD in experimental astrophysics, with a focus on calibration
+            uncertainty and interferometer controls.
             <br> As a grad student I worked as a commissioner at LIGO intermittently for a total of two years.
-            <br> I focused on modeling laser frequency and intensity control systems' noise masking the gravitational-wave signal,
+            <br> I focused on modeling laser frequency and intensity control systems' noise masking the
+            gravitational-wave signal,
             <br> measured and simulated interferometer transfer functions to infer the resonant arm power,
-            <br> measured and simulated the differential arm (DARM) degree of freedom for comparison between the expected response to gravitational-waves and reality,
+            <br> measured and simulated the differential arm (DARM) degree of freedom for comparison between the
+            expected response to gravitational-waves and reality,
             <br> and created the advanced-detector era interferometric calibration uncertainty budget pipeline.
         </p>
         <p>
             <label>Programming Languages and Computing</label>
             <br> Python, C/C++, MATLAB, Unix, Javascript, Git, LaTeX
             <br> Interferometer simulation <a href="http://www.gwoptics.org/finesse/">Finesse</a>
-            <br> Linear Simulation and Optimization of analog electronic circuits <a href="http://www2.mpq.mpg.de/~ros/geo600_docu/soft/liso/manual.pdf">LISO</a>
+            <br> Linear Simulation and Optimization of analog electronic circuits <a
+                href="http://www2.mpq.mpg.de/~ros/geo600_docu/soft/liso/manual.pdf">LISO</a>
         </p>
-        <p> 
+        <p>
             <label>PyPi Libraries</label>
-            <br> <a href="https://pypi.org/project/nds2utils/">nds2utils</a>: convenient user interface for the python nds2 LIGO data-acquisition client. 
+            <br> <a href="https://pypi.org/project/nds2utils/">nds2utils</a>: convenient user interface for the python
+            nds2 LIGO data-acquisition client.
             <a href="https://git.ligo.org/craig-cahillane/nds2utils">(gitlab)</a>
-            <br> <a href="https://pypi.org/project/beamtrace/">beamtrace</a>: python3 based gaussian laser beam ABCD matrix propagator. 
+            <br> <a href="https://pypi.org/project/beamtrace/">beamtrace</a>: python3 based gaussian laser beam ABCD
+            matrix propagator.
             <a href="https://git.ligo.org/craig-cahillane/beamtrace">(gitlab)</a>
         </p>
         <p>
             <label>Statistical Methods</label>
             <br> Markov Chain Monte Carlo (MCMC): <a href="https://emcee.readthedocs.io/en/stable/">emcee</a>
-            <br> Gaussian Process Regression (GPR): <a href="https://scikit-learn.org/stable/modules/gaussian_process.html">scikit-learn</a>
+            <br> Gaussian Process Regression (GPR): <a
+                href="https://scikit-learn.org/stable/modules/gaussian_process.html">scikit-learn</a>
         </p>
         <p>
             <label>Optics</label>
-            <br> Worked in the Caltech optical coatings thermal noise lab for testing aluminum gallium arsinide (AlGaAs) optics coatings. 
-            <br> Locked two lasers' frequencies to two Fabry-Perot cavity lengths with the goal of measuring cavity mirror coatings Brownian noise.
-            <br> Mode matching, polarization, mode cleaning, laser intensity control, laser frequency control, cavity temperature control
+            <br> Worked in the Caltech optical coatings thermal noise lab for testing aluminum gallium arsinide (AlGaAs)
+            optics coatings.
+            <br> Locked two lasers' frequencies to two Fabry-Perot cavity lengths with the goal of measuring cavity
+            mirror coatings Brownian noise.
+            <br> Mode matching, polarization, mode cleaning, laser intensity control, laser frequency control, cavity
+            temperature control
         </p>
         <p>
             <label>Electronics</label>
@@ -75,45 +86,62 @@
         <p>
             <label>Outreach</label> 2015-2017 LIGO Caltech Outreach Lead.
             <br> <a href="blackholedemo.html">Black Hole Merger Demonstration</a>
-            <br> Organized ~15 trips to local elementary and high schools, and even more talks to schools out of state, including Notre Dame.
-            <br> <a href="blackholedemo.html">Black Hole Merger Demonstration</a>.  Simulates gravitational wave emission from black hole binaries near the end of their lives.
-            <br> <a href="fabryperot.html">Interactive Fabry-Perot optical cavity</a>.  Visualizes how lasers and mirrors interact in a simple two-mirror resonator.
-            <br> <a href="lho_xcor_interactive.html">Interactive LHO correlated noise plot</a>.  Demo of my interactive LIGO Hanford correlated noise plot.
+            <br> Organized ~15 trips to local elementary and high schools, and even more talks to schools out of state,
+            including Notre Dame.
+            <br> <a href="blackholedemo.html">Black Hole Merger Demonstration</a>. Simulates gravitational wave emission
+            from black hole binaries near the end of their lives.
+            <br> <a href="fabryperot.html">Interactive Fabry-Perot optical cavity</a>. Visualizes how lasers and mirrors
+            interact in a simple two-mirror resonator.
+            <br> <a href="lho_xcor_interactive.html">Interactive LHO correlated noise plot</a>. Demo of my interactive
+            LIGO Hanford correlated noise plot.
         </p>
         <p>
-            <label>Alma Mater:</label> <img src="figures/NotreDameLogo.png" alt="Notre Dame Logo" style="width:22px;height:20px;"> University of Notre Dame. Graduated 2014.  Degrees in Physics and Computer Science.  3.795 GPA
+            <label>Alma Mater:</label> <img src="figures/NotreDameLogo.png" alt="Notre Dame Logo"
+                style="width:22px;height:20px;"> University of Notre Dame. Graduated 2014. Degrees in Physics and
+            Computer Science. 3.795 GPA
         </p>
         <p>
-            <label>Interests:</label> Lasers, Optics, Control Systems, Cosmoslogy, Astrophysics, Arduino, Raspberry Pi, Golf, Tennis, Frisbee, Notre Dame Football, 538 The Riddler
+            <label>Interests:</label> Lasers, Optics, Control Systems, Cosmoslogy, Astrophysics, Arduino, Raspberry Pi,
+            Golf, Tennis, Frisbee, Notre Dame Football, 538 The Riddler
         </p>
 
         <h2>Publications:</h2>
         <p>First Author:
-            <br> <a href="https://doi.org/10.1103/PhysRevD.96.102001">Calibration Uncertainty for Advanced LIGO's First and Second Observing Runs</a>
+            <br> <a href="https://doi.org/10.1103/PhysRevD.96.102001">Calibration Uncertainty for Advanced LIGO's First
+                and Second Observing Runs</a>
             <a href="https://arxiv.org/abs/1708.03023">(arXiv)</a>
         </p>
         <p>Contributing Author:
-            <br> <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.95.062003">Calibration of the Advanced LIGO detectors for the discovery of the binary black-hole merger GW150914</a>
+            <br> <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.95.062003">Calibration of the Advanced
+                LIGO detectors for the discovery of the binary black-hole merger GW150914</a>
             <a href="https://arxiv.org/abs/1602.03845">(arXiv)</a>
-            <br> <a href="https://iopscience.iop.org/article/10.1088/1361-6382/ab368c">Systematic calibration error requirements for gravitational-wave detectors via the Cramér-Rao bound</a>
+            <br> <a href="https://iopscience.iop.org/article/10.1088/1361-6382/ab368c">Systematic calibration error
+                requirements for gravitational-wave detectors via the Cramér-Rao bound</a>
             <a href="https://arxiv.org/abs/1712.09719">(arXiv)</a>
         </p>
         <p>In Prep (as first author or member of paper-writing team):
-            <br> <a href="https://git.ligo.org/o3commissioning/o3-commissioning-paper/">Sensitivity and Performance of the Advanced LIGO Detectors in the Third Observing Run</a>
-            <br> <a href="https://git.ligo.org/3gfrequencynoise/3gfn-paper">Frequency Noise for Third-Generation Gravitational Wave Detectors</a>
+            <br> <a href="https://git.ligo.org/o3commissioning/o3-commissioning-paper/">Sensitivity and Performance of
+                the Advanced LIGO Detectors in the Third Observing Run</a>
+            <br> <a href="https://git.ligo.org/3gfrequencynoise/3gfn-paper">Frequency Noise for Third-Generation
+                Gravitational Wave Detectors</a>
         </p>
         <p>Full Collaboration Papers:
             <br>
-            <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.119.161101">GW170817: Observation of Gravitational Waves from a Binary Neutron Star Inspiral</a> First direct detection of gravitational waves from a neutron star binary.
-            <br> <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.116.061102">Observation of Gravitational Waves from a Binary Black Hole Merger</a> First detection of gravitational waves.
+            <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.119.161101">GW170817: Observation of
+                Gravitational Waves from a Binary Neutron Star Inspiral</a> First direct detection of gravitational
+            waves from a neutron star binary.
+            <br> <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.116.061102">Observation of
+                Gravitational Waves from a Binary Black Hole Merger</a> First detection of gravitational waves.
         </p>
 
         <h2>Links:</h2>
-        <a href="https://www.youtube.com/watch?v=X7RJHxeCulY">How does LIGO detect gravitational waves?</a>  Youtube video submission to the SoME1 math explainer competition.
+        <a href="https://www.youtube.com/watch?v=X7RJHxeCulY">How does LIGO detect gravitational waves?</a> Youtube
+        video submission to the SoME1 math explainer competition.
         <br>
         <a href="fabryperot.html">Interactive Fabry-Perot Optical Cavity Animation in Javascript</a>
         <br>
-        <a href="open_loop_gain_plot.mp4">Interactive PyQt5 widget for fast analysis of LIGO measured transfer functions</a>
+        <a href="open_loop_gain_plot.mp4">Interactive PyQt5 widget for fast analysis of LIGO measured transfer
+            functions</a>
         <br>
         <a href="shot.html">Shot Noise Calculator</a>
         <br>
@@ -121,7 +149,8 @@
         <br>
         <a href="alcohol-tracker/index.html">Blood Alcohol Content Estimator in React</a>
         <br>
-        <a href="https://fivethirtyeight.com/features/can-you-do-math-without-numbers/">My animated solution to a 538 The Riddler problem - May 12, 2017</a>
+        <a href="https://fivethirtyeight.com/features/can-you-do-math-without-numbers/">My animated solution to a 538
+            The Riddler problem - May 12, 2017</a>
         <br>
         <a href="https://en.wikipedia.org/wiki/Special:Contributions/Ccahilla">Wikipedia contributions</a>
         <br>
@@ -141,11 +170,14 @@
         <a href="ward_vs_finesse_DARM_model.svg">Finesse vs Ward vs actual LHO DARM measurement</a>
         <br>
         <h3>LHO correlated noise spectra</h3>
-        <a href="lho_xcor_comparisons_no_logbinning.svg">LHO Correlated Noise Budget - comparisons of many numbers of averages</a>
+        <a href="lho_xcor_comparisons_no_logbinning.svg">LHO Correlated Noise Budget - comparisons of many numbers of
+            averages</a>
         <br>
-        <a href="lho_xcor_no_logbinning_averages_1000.svg">LHO Correlated Noise Budget - 1000 averages - ungated vs gated mean ASD vs median averaged ASD</a>
+        <a href="lho_xcor_no_logbinning_averages_1000.svg">LHO Correlated Noise Budget - 1000 averages - ungated vs
+            gated mean ASD vs median averaged ASD</a>
         <br>
-        <a href="lho_xcor_no_logbinning_averages_20000.svg">LHO Correlated Noise Budget - 20000 averages - ungated vs gated mean ASD vs median averaged ASD</a>
+        <a href="lho_xcor_no_logbinning_averages_20000.svg">LHO Correlated Noise Budget - 20000 averages - ungated vs
+            gated mean ASD vs median averaged ASD</a>
         <br>
         <a href="lho_xcor_mA.svg">Raw DCPD CSDs plus SUM plus NULL - 1000 averages</a>
         <br>
@@ -153,9 +185,14 @@
         <br>
         <a href="lho_xcor_CSDs_averages_20000.svg">LHO CSDs and coherence - 20000 averages</a>
         <br>
-        <a href="lho_xcor_DARM_comparisons.svg">LHO Correlated Noise Budget - Comparison with different DARM OLGs - gated- and median-averaging</a>
+        <a href="lho_xcor_DARM_comparisons.svg">LHO Correlated Noise Budget - Comparison with different DARM OLGs -
+            gated- and median-averaging</a>
         <br>
-        <a href="lho_xcor_DCPD_balanced_comparisons.svg">LHO Correalted Noise Budget - Comparison between shot noise balanced and unbalanced PDs</a>
+        <a href="lho_xcor_DCPD_balanced_comparisons.svg">LHO Correlated Noise Budget - Comparison between shot noise
+            balanced and unbalanced PDs</a>
+        <br>
+        <a href="2022_04_13_omc_scan_with_estimated_lines_55W_0_DARM_Offset__45___18_dB__9___23_4_dB_.svg">High power
+            OMC scan with increased 9 MHz modulation depth</a>
         <br>
         <br>
 
