Added index.html figures/syracuse_logo.png and did a small update on research

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
         <h1 class="text-center">Craig Cahillane</h1>
         <p class="text-center">
-            Postdoc for<img src="figures/LIGOLogo.jpg" alt="LIGO Logo" style="width:42px;height:30px;">
+	    Assistant Professor at Syracuse <img src="figures/syracuse_logo.png" alt="Syracuse Logo" style="width:60px;height:60px;">
+	    <br> Postdoc for<img src="figures/LIGOLogo.jpg" alt="LIGO Logo" style="width:42px;height:30px;">
             <br> PhD in Experimental Gravity from <img src="figures/Caltech.png" alt="Caltech Logo"
                 style="width:62px;height:15px;">
             <br> craigcahillane@fastmail.com
@@ -27,7 +28,11 @@
         </p>
         <p>
             <label>Research</label>
-            <br> I am currently a postdoc at LIGO Hanford Observatory, starting in February 2021.
+	    <br> I am currently an Assistant Professor at Syracuse University.  
+	    <br> My research focuses on developing technology for gravitational wave detectors, with a focus on ultra-high power laser systems.
+	    <br> I am also currently exploring photoneutralization cavities for neutral beam injection in tokamak fusion reactors.
+	    <br> 
+            <br> I was a postdoc at LIGO Hanford Observatory, starting in February 2021.
             <br> I graduated from Caltech with a PhD in experimental astrophysics, with a focus on calibration
             uncertainty and interferometer controls.
             <br> As a grad student I worked as a commissioner at LIGO intermittently for a total of two years.
